--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# homework
+# my_homework
 Репозиторий для сдачи домашних заданий на курсе Python Developer.Basic 
 начало 27.08.2021
 учащийся Лакомый Алексей Александрович 
